Loading component was getting behind other elements: fixed

--- a/frontend/src/components/Loading.css
+++ b/frontend/src/components/Loading.css
@@ -3,4 +3,5 @@
     height: 6px !important;
     position:fixed;
     top: 52px;
+    z-index: 1400;
 }
